@@ -6,6 +6,8 @@ cdebconf (0.131) unstable; urgency=low
 
   [ Max Vozeler ]
   * Fix *_can_align() function signatures to match the prototype.
+  * Adapt ncurses, slang and bogl frontends to API changes made in 
+    cdebconf 0.129 - q_get_*() and question_get_value().
 
   [ Jérémy Bobbio ]
   * In the GTK+ frontend, the "Go Back" button is now created before calling
